# llm-robot-control

./: README.md  docker-compose.yml  run.sh  up.sh
llm_container/: Dockerfile
llm_container/app/: llm_server.py  tool_schema.json
ros2_gazebo_container/: Dockerfile
ros2_gazebo_container/colcon_ws/scripts/: headless_smoke_test.sh  run_ros_stack.sh
ros2_gazebo_container/colcon_ws/src/nav2_params/: nav2_params.yaml  package.xml  setup.py
ros2_gazebo_container/colcon_ws/src/tool_server/: package.xml  setup.cfg  setup.py
ros2_gazebo_container/colcon_ws/src/tool_server/launch/: small_house_tb3.launch.py
ros2_gazebo_container/colcon_ws/src/tool_server/tool_server/: tool_server.py
ros2_gazebo_container/colcon_ws/src/tool_server/world/: small_house.world
services/llm_service/: Dockerfile  requirements.txt
services/llm_service/app/: main.py
services/ros_bridge/: Dockerfile  run_ros.sh
services/ros_bridge/app/: main.py
services/web_ui/: Dockerfile  requirements.txt
services/web_ui/app/: manage.py
services/web_ui/app/templates/: index.html
services/web_ui/app/webui/: asgi.py  settings.py  urls.py  wsgi.py
services/web_ui/app/webuiapp/: apps.py  views.py
web_ui_container/: Dockerfile
web_ui_container/app/: manage.py  tool_schema.json
web_ui_container/app/templates/: index.html
web_ui_container/app/web_ui/: settings.py  urls.py  views.py
