<?xml version="1.0"?>
<package format="3">
  <name>nav2_params</name>
  <version>0.0.1</version>
  <description>Nav2 parameters for robot control</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>