<?xml version="1.0"?>
<package format="3">
  <name>tool_server</name>
  <version>0.0.1</version>
  <description>Tool server for robot control</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>fastapi</exec_depend>
  <exec_depend>uvicorn</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>